--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<label><input id="ai_only_radio" type="radio" name="myRadioButtons" onclick="radioChange(this);" value="1" checked="checked"/>AI Only</label>
 		<label><input id="real_player_radio" type="radio" name="myRadioButtons" onclick="radioChange(this);" value="0" />I want to play (Right and Left Arrow)</label>
 	</div>
-    <p id="zoom_note">Note: You save and load button to test!</p>
+    <p id="zoom_note">Note: Use save and load button to test!</p>
 
     <div id="save_load_buttons">
 		<button id="save_button">Save</button>
